# nes-rust-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: apu.rs  cassette.rs  cpu_instruction.rs  system_apu_reg.rs
wasm/: Cargo.toml  index.html  package-lock.json  package.json
wasm/src/: lib.rs
