[package]
name = "nes-rust-emulator"
version = "0.1.0"
authors = ["Benjamin Fan </benjaminfan.github.io/>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

features]
default = [ "unsafe-opt" ]
unsafe-opt = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true

[lib]
path = "src/lib.rs"
name = "rust_nes_emulator"