[package]
name = "nes-emulator"
version = "0.1.0"
authors = ["Ben Fan <benjaminfan.github.io>"]
edition = "2021"

[[bin]]
name = "nes-emulator"
path = "src/main.rs"

[[bench]]
name = "emulator"
harness = false

[dev-dependencies]
criterion = "0.3"
clap = "3.0.0-beta.1"
env_logger = "0.7"

[dependencies]
sdl2 = "0.32"
log = "0.4.11"
tokio = {version = "0.2", features = ["uds"]}

[profile.release]
opt-level = 3
